# Xynrinbot

./: README.md  bot.py  install.sh  project_config.py  pyproject.toml
config/: appsettings.json.example
docs/: ARCHITECTURE.md  COMPATIBILITY.md
plugins/: __init__.py
plugins/group_verify/: __init__.py  admin_actions.py  admin_security.py  admin_view_parts.py  config.py  db.py  models.py  onebot_providers.py  onebot_runtime.py  service.py  verify_templates.py  web_admin.py
plugins/group_verify/templates/: service_status.html  verify_card.html
plugins/group_verify/templates/themes/: verify_card.glass.html  verify_card.warning.html
scripts/: bootstrap.sh  check_env.py  install_onebot.sh  projectctl.py  run.sh  start.sh  update.sh
scripts/lib/: network.sh  runtime.sh
